# atomic_habits_tracker

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
atomic_habits/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
atomic_habits/migrations/: 0001_initial.py  0002_alter_habit_is_pleasant_habit_alter_habit_is_public.py  0003_habit_last_completed.py  0004_habit_tg_chat_id.py  0005_remove_habit_tg_chat_id.py  0006_alter_habit_periodicity.py
config/: settings.py  urls.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
